--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,7 @@ logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 #flyway
 spring.flyway.baseline-on-migrate=true
 spring.flyway.enabled=false
+#i18n
+spring.messages.basename=languages/messages
+spring.messages.encoding=UTF-8
+spring.messages.fallback-to-system-locale=true
