--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,8 @@ spring.flyway.enabled=false
 spring.messages.basename=languages/messages
 spring.messages.encoding=UTF-8
 spring.messages.fallback-to-system-locale=true
+#mail
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
